# physika

./: LICENSE  README.md  codegen.py  execute.py  lexer.py  parser.out  parser.py  parsetab.py  pyproject.toml  setup.py  type_checker.py  utils.py
docs/: api.rst  conf.py  elf.rst  examples.rst  index.rst  language.rst
examples/: diff_for.phyk  diff_functions.phyk  diff_ifelse.phyk  example_arrays.phyk  example_complex.phyk  example_declarations.phyk  example_jacobian.phyk  example_jacobians.phyk  example_matrices.phyk  example_numeric_types.phyk  example_tensors.phyk  for.phyk  greek_letter_and_scientific_notation.phyk  harmonic_oscillator.phyk  hnn.phyk  if_else_contexts.phyk  networks.phyk  pendulum_rk4.phyk  randomness.phyk  spring_pendulum_rk4.phyk  train_fully_connected.phyk
my_examples/: 1d_heat_equation.phyk  1d_schrodinger_equation.phyk  2d_heat_equation.phyk  FNO.phyk  adjoint.ipynb  adjoint_lotka.ipynb  advection_equation.phyk  another_working_schrodinger.phyk  burgers_equation.phyk  cnn_mnist.phyk  cnn_with_simple_example.phyk  convnets.phyk  coupled_oscillator.phyk  damped_oscillator.phyk  edit_codegen.py  edit_runtime.py  electrostatic.phyk  final_schrodinger.phyk  fishers_equation.phyk  gaussian_elimination.phyk  gradient_descent.phyk  heat.ipynb  heat_equation_stencil.phyk  hnn_forward.phyk  mass_spring.phyk  neural_ode.phyk  neural_ode_adjoing.phyk  new_2d_heat.phyk  ode_learn_parameter.phyk  parameter_learning_pde.ipynb  pde_learn_parameter  pde_tutorial.rst  physika_schrodinger_parameter_learning.phyk  predator_prey_ode_learn.phyk  transformers.phyk  (+11 more)
(+138 files in other folders)
