[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "pep8"
column_limit = 79

[tool.flake8]
exclude = [
    "examples",
    "parsetab.py",
    "parser.out",
    "*.egg-info",
    "build",
    ".git",
]

[tool.yapfignore]
ignore_patterns = [
    "examples/**",
    "parsetab.py",
    "parser.out",
    "**/*.egg-info/**",
    "build/**",
]
